tests/fixtures/invalid/incomplete_fun.dub
// Truncated function declaration — no parameter list or body.
fun
